# wooridb

./: .env  .gitignore  2021_01_08.txt  Cargo.toml  Dockerfile  Makefile  README.md  insert-report.json  local_data.txt  protos_rfc.md  select-report.json
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml  rust.yml
benches/: create_entity.rs  history.rs  query.rs  tx.rs  wql.rs
book/: Cargo.toml  book.toml
book/book/html/: index.html  print.html  searchindex.js  searchindex.json  sec-1-introduction.html
book/src/: SUMMARY.md  sec-1-introduction.md  sec-10-errors.md  sec-11-json.md  sec-2-installation.md  sec-3-features.md  sec-4-wql.md  sec-5-auth.md  sec-6-tx.md  sec-7-queries.md  sec-8-history.md  sec-9-algebra.md  sec-9-errors.md
data/: encrypt.txt  local_data.txt  uniques.txt
docs/: 404.html  index.html  print.html  searchindex.js  searchindex.json  sec-1-introduction.html  sec-10-errors.html  sec-11-json.html  sec-2-installation.html  sec-3-features.html  sec-4-wql.html  sec-5-auth.html  sec-6-tx.html  sec-7-queries.html  sec-8-errors.html  sec-8-history.html  sec-9-algebra.html  sec-9-errors.html
docs/html/: 404.html  sec-2-installation.html  sec-5-auth.html
woori-db/: Cargo.toml  Makefile  unique_data.txt
woori-db/data/: 2021_02_09.txt  local_data.txt
woori-db/src/: main.rs
woori-db/src/actors/: encrypts.rs  history.rs  mod.rs  recovery.rs  scheduler.rs  state.rs  uniques.rs  when.rs  wql.rs
woori-db/src/auth/: controllers.rs  io.rs  middlewares.rs  mod.rs  models.rs  schemas.rs
woori-db/src/controllers/: algebra_test.rs  clauses.rs  clauses_test.rs  entity_history.rs  entity_history_test.rs  json_history_test.rs  mod.rs  query.rs  query_test.rs  relation.rs  relation_test.rs  test.rs  tx.rs  tx_test.rs  wql.rs
woori-db/src/core/: mod.rs  query.rs  registry.rs  wql.rs
woori-db/src/http/: mod.rs
woori-db/src/io/: mod.rs  read.rs  write.rs
woori-db/src/model/: error.rs  mod.rs  wql.rs
woori-db/src/repository/: local.rs  mod.rs
woori-db/src/schemas/: error.rs  history.rs  mod.rs  query.rs  tx.rs
wql/: Cargo.toml
wql/src/: join.rs  language_parser.rs  lib.rs  logic.rs  relation.rs  select.rs  test.rs  where_clause.rs
