[package]
name = "woori-db"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-http = "2.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.121"
num_cpus = "1.13"
log = "0.4"
env_logger = "*"
fort = "0.4"
bastion = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
actix-service = "1.0.6"
futures = "0.3.12"
ron = "0.6.4"
mime = "*"
wql = {path = "../wql"}
cron = "0.7.0"
glob = "0.3.0"
zstd = "0.6.0+zstd.1.4.8"
bcrypt = "0.8"

[dev-dependencies]
bytes = "1.0.1"