[package]
name = "woori-db"
version = "0.1.10"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "WooriDB is a general purpose time serial database with some relation algebra"
readme = "README.md"
documentation = "https://github.com/naomijub/wooridb/README.md"
repository = "https://github.com/naomijub/wooridb/"
keywords = ["woori", "database", "time serial"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_read = []
history = []
json = ["serde_json"]
json_pure = ["json", "wql/json_pure"]

[dependencies]
actix = "0.10.0"
actix-web = "3.3.3"
actix-rt = "1.1.1"
actix-http = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_derive = "1.0.121"
rayon = "1.5"
num_cpus = "1.13"
log = "0.4"
env_logger = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.12"
ron = "0.6.4"
wql = {path = "../wql"}
cron = "0.7.0"
glob = "0.3.0"
zstd = "0.6.0+zstd.1.4.8"
bcrypt = "0.8"
actix-web-httpauth = "0.5.0"
bincode = "1.3"

[dev-dependencies]
bytes = "1.0.1"
