[package]
name = "wql"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Crate to parse WQL"
readme = "README.md"
documentation = "README.md"
repository = "https://github.com/naomijub/wooridb/wql"
keywords = ["wql"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
