[package]
name = "wql"
version = "0.1.3"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Crate to parse WQL"
readme = "../README.md"
documentation = "https://github.com/naomijub/wooridb/blob/main/README.md"
repository = "https://github.com/naomijub/wooridb/wql"
keywords = ["wql"]
license = "LGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.121", features = ["derive"] }
bcrypt = "0.8"

[dev-dependencies]
edn-rs = "0.16.12"